# 6Jack

./: .gitignore  .travis.yml  6jack.c  AUTHORS  COPYING  INSTALL  Makefile.am  NEWS  README.markdown  a.rb  autogen.sh  configure.ac
example-filters/: Makefile.am  filter-passthrough.php  filter-passthrough.rb  filter-string.rb  filter-transparent-proxy.rb  filter-unreliable-connect.rb  filter-uppercase.rb
man/: 6jack.8  6jack.8.markdown  6jack.8.md  Makefile.am
src/: 6jack-test.c  6jack.c  6jack.h  6jack.in  Makefile.am  app.c  common.h  example-filter.rb  filter.c  filter.h  hook-bind.c  hook-bind.h  hook-close.c  hook-close.h  hook-connect-bind.c  hook-connect-bind.h  hook-connect.c  hook-connect.h  hook-read.c  hook-read.h  hook-recv.c  hook-recv.h  hook-recvfrom.c  hook-recvfrom.h  hook-recvmsg.c  hook-recvmsg.h  hook-send.c  hook-send.h  hook-sendmsg.c  hook-sendmsg.h  hook-sendto.c  hook-sendto.h  hook-socket.c  hook-socket.h  hook-write.c  hook-write.h  hook-writev.c  hook-writev.h  hooks.c  hooks.h  (+10 more)
